[package]
edition = "2021"
name = "musicbrainz"
version = "0.1.0"

[dependencies]
entity = { path = "entity" }
axum = { version = "0.8" }
async-graphql = { version = "7.0" }
async-graphql-axum = { version = "7.0" }
dotenv = "0.15.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }

[dependencies.sea-orm]
version = "2.0.0-rc.17"
features = ["sqlx-postgres", "runtime-tokio-native-tls", "seaography"]

[dependencies.seaography]
version = "~2.0.0-rc.4" # seaography version
features = ["with-decimal", "with-chrono"]

[dev-dependencies]
serde_json = { version = "1.0.103" }

[workspace]
members = ["entity"]
