[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "2.0.0-rc.17", features = ["sqlx-postgres", "runtime-async-std-native-tls"] }


[dependencies.seaography]
version = "~2.0.0-rc.2" # seaography version
features = ["with-decimal", "with-chrono"]
